fixed horizontal scrollbar

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-image: url("images/whisps.jpg");
     background-size: 1610px 1000px;
